# oida

./: .gitignore  .tool-versions  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/actions/setup-project/: action.yaml
.github/workflows/: ci.yml  release.yml
klint/: __main__.py  discovery.py  state.py
klint/checkers/: __init__.py  imports.py
oida/: __main__.py  component.py  config.py  config_generator.py  console.py  discovery.py  flake8.py  linter.py  module.py  reporter.py  runner.py  utils.py
oida/checkers/: __init__.py  apps.py  base.py  components.py  config.py  django_orm.py  imports.py  models.py  services.py
oida/commands/: __init__.py  componentize.py  config.py  linter.py
oida/statistics/: statistics_generator.py
tests/: conftest.py  test_app_isolation_checker.py  test_app_isolation_imports_checker.py  test_check_non_typing_imports.py  test_command_componentize.py  test_component_isolation_checker.py  test_config_checker.py  test_ignore_generator.py  test_isolation_allowed_imports.py  test_isolation_non_violations.py  test_isolation_violations.py  test_keyword_only_checker.py  test_model_isolation_violations.py  test_noqa.py  test_project_config.py  test_relative_imports_checker.py  test_select_for_update_checker.py  test_service_and_selctor_imports_checker.py
