[tool.poetry]
name = "oida"
version = "0.0.1"
description = "Oda's very own linter"
authors = ["Oda <tech@oda.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
libcst = "^0.4.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pep8-naming = "^0.12.1"

[tool.poetry.scripts]
oida = 'oida.console:main'

[tool.poetry.plugins."flake8.extension"]
ODA = "oida.flake8:Plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "module(name, package, path, content): Define the module to run the checker on",
    "component_config(allowed_imports=..., allowed_foreign_keys...): Set component config",
    "project_files(file_mapping): Files to create in a temporary project directory",
]

[tool.isort]
profile = "black"
